// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no-tickets with errors renders an error report 1`] = `
<div
  className="text-center"
>
  <Report
    errors={
      Array [
        [Error: TestError],
      ]
    }
  />
</div>
`;

exports[`no-tickets with no errors renders a hint 1`] = `
<div
  className="text-center"
>
  <Hint />
</div>
`;
